@@ -74,7 +74,7 @@ public class GreaterThan extends org.apache.jena.reasoner.rulesys.builtins.Great
         	return retVal;
         }
         else {
-        	 Node booleanVal =  NodeFactory.createLiteral(LiteralLabelFactory.create(new Boolean(retVal)));
+        	 Node booleanVal =  NodeFactory.createLiteral(LiteralLabelFactory.createTypedLiteral(Boolean.valueOf(retVal)));
              return context.getEnv().bind(args[length - 1], booleanVal);
         }
     }
